parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Inicio
Rule 1     Inicio -> Start Variaveis Codigo
Rule 2     Start -> <empty>
Rule 3     Variaveis -> { Declaracoes }
Rule 4     Declaracoes -> Declaracao Declaracoes
Rule 5     Declaracoes -> <empty>
Rule 6     Declaracao -> Type ContinuacaoDeclaracao
Rule 7     Type -> ID
Rule 8     ContinuacaoDeclaracao -> ID ContContinuacaoDeclaracao
Rule 9     ContinuacaoDeclaracao -> Array ID ;
Rule 10    ContContinuacaoDeclaracao -> = Expr ;
Rule 11    ContContinuacaoDeclaracao -> ;
Rule 12    Array -> [ INT ] ContArray
Rule 13    ContArray -> [ INT ]
Rule 14    ContArray -> <empty>
Rule 15    Expr -> Expr ContinuacaoExpr
Rule 16    Expr -> Term
Rule 17    ContinuacaoExpr -> + Term
Rule 18    ContinuacaoExpr -> - Term
Rule 19    Term -> Term ContinuacaoTerm
Rule 20    Term -> Factor
Rule 21    ContinuacaoTerm -> * Factor
Rule 22    ContinuacaoTerm -> / Factor
Rule 23    ContinuacaoTerm -> % Factor
Rule 24    Factor -> INT
Rule 25    Factor -> - INT
Rule 26    Factor -> FLOAT
Rule 27    Factor -> - FLOAT
Rule 28    Factor -> ID ContinuacaoFactor
Rule 29    ContinuacaoFactor -> [ INT ] ContContinuacaoFactor
Rule 30    ContinuacaoFactor -> <empty>
Rule 31    ContContinuacaoFactor -> [ INT ]
Rule 32    ContContinuacaoFactor -> <empty>
Rule 33    Factor -> CALL ID
Rule 34    Codigo -> Funcao Codigo
Rule 35    Codigo -> Instrucao Codigo
Rule 36    Codigo -> <empty>
Rule 37    Funcao -> DecFunc { Variaveis ListInstrucao Ret }
Rule 38    DecFunc -> FUNC ID
Rule 39    Ret -> RET Expr ;
Rule 40    ListInstrucao -> Instrucao ListInstrucao
Rule 41    ListInstrucao -> <empty>
Rule 42    Instrucao -> Atribuicao
Rule 43    Instrucao -> Leitura
Rule 44    Instrucao -> Escrita
Rule 45    Instrucao -> Condicao
Rule 46    Instrucao -> Ciclo
Rule 47    Atribuicao -> Var = Expr ;
Rule 48    Var -> ID ContinuacaoVar
Rule 49    ContinuacaoVar -> [ INT ] ContContinuacaoVar
Rule 50    ContinuacaoVar -> <empty>
Rule 51    ContContinuacaoVar -> [ INT ]
Rule 52    ContContinuacaoVar -> <empty>
Rule 53    Leitura -> READ Var ;
Rule 54    Escrita -> WRITE Var ;
Rule 55    Condicao -> IF ExprCond Do ListInstrucao ContinuacaoIf
Rule 56    ContinuacaoIf -> Else ListInstrucao ;
Rule 57    ContinuacaoIf -> ;
Rule 58    Do -> DO
Rule 59    Else -> ELSE
Rule 60    ExprCond -> ExprCond ContinuacaoExprCond
Rule 61    ExprCond -> Cond
Rule 62    ContinuacaoExprCond -> & Cond
Rule 63    ContinuacaoExprCond -> | Cond
Rule 64    Cond -> Expr ContinuacaoCond
Rule 65    ContinuacaoCond -> EQUAL Expr
Rule 66    ContinuacaoCond -> BIGGER Expr
Rule 67    ContinuacaoCond -> BIGGEREQUAL Expr
Rule 68    ContinuacaoCond -> SMALLER Expr
Rule 69    ContinuacaoCond -> SMALLEREQUAL Expr
Rule 70    Ciclo -> CicloWhile
Rule 71    Ciclo -> CicloRepeat
Rule 72    Ciclo -> CicloFor
Rule 73    CicloWhile -> While ExprCond Do { ListInstrucao }
Rule 74    While -> WHILE
Rule 75    CicloRepeat -> Repeat { ListInstrucao } Until ExprCond
Rule 76    Repeat -> REPEAT
Rule 77    Until -> UNTIL
Rule 78    CicloFor -> FOR ( AtribuicaoInicial ExprCond EndCond Atribuicao ) { ListInstrucao }
Rule 79    AtribuicaoInicial -> Atribuicao
Rule 80    EndCond -> ;

Terminals, with rules where they appear

%                    : 23
&                    : 62
(                    : 78
)                    : 78
*                    : 21
+                    : 17
-                    : 18 25 27
/                    : 22
;                    : 9 10 11 39 47 53 54 56 57 80
=                    : 10 47
BIGGER               : 66
BIGGEREQUAL          : 67
CALL                 : 33
DO                   : 58
ELSE                 : 59
EQUAL                : 65
FLOAT                : 26 27
FOR                  : 78
FUNC                 : 38
ID                   : 7 8 9 28 33 38 48
IF                   : 55
INT                  : 12 13 24 25 29 31 49 51
READ                 : 53
REPEAT               : 76
RET                  : 39
SMALLER              : 68
SMALLEREQUAL         : 69
UNTIL                : 77
WHILE                : 74
WRITE                : 54
[                    : 12 13 29 31 49 51
]                    : 12 13 29 31 49 51
error                : 
{                    : 3 37 73 75 78
|                    : 63
}                    : 3 37 73 75 78

Nonterminals, with rules where they appear

Array                : 9
Atribuicao           : 42 78 79
AtribuicaoInicial    : 78
Ciclo                : 46
CicloFor             : 72
CicloRepeat          : 71
CicloWhile           : 70
Codigo               : 1 34 35
Cond                 : 61 62 63
Condicao             : 45
ContArray            : 12
ContContinuacaoDeclaracao : 8
ContContinuacaoFactor : 29
ContContinuacaoVar   : 49
ContinuacaoCond      : 64
ContinuacaoDeclaracao : 6
ContinuacaoExpr      : 15
ContinuacaoExprCond  : 60
ContinuacaoFactor    : 28
ContinuacaoIf        : 55
ContinuacaoTerm      : 19
ContinuacaoVar       : 48
DecFunc              : 37
Declaracao           : 4
Declaracoes          : 3 4
Do                   : 55 73
Else                 : 56
EndCond              : 78
Escrita              : 44
Expr                 : 10 15 39 47 64 65 66 67 68 69
ExprCond             : 55 60 73 75 78
Factor               : 20 21 22 23
Funcao               : 34
Inicio               : 0
Instrucao            : 35 40
Leitura              : 43
ListInstrucao        : 37 40 55 56 73 75 78
Repeat               : 75
Ret                  : 37
Start                : 1
Term                 : 16 17 18 19
Type                 : 6
Until                : 75
Var                  : 47 53 54
Variaveis            : 1 37
While                : 73

Parsing method: LALR

state 0

    (0) S' -> . Inicio
    (1) Inicio -> . Start Variaveis Codigo
    (2) Start -> .

    {               reduce using rule 2 (Start -> .)

    Inicio                         shift and go to state 1
    Start                          shift and go to state 2

state 1

    (0) S' -> Inicio .



state 2

    (1) Inicio -> Start . Variaveis Codigo
    (3) Variaveis -> . { Declaracoes }

    {               shift and go to state 4

    Variaveis                      shift and go to state 3

state 3

    (1) Inicio -> Start Variaveis . Codigo
    (34) Codigo -> . Funcao Codigo
    (35) Codigo -> . Instrucao Codigo
    (36) Codigo -> .
    (37) Funcao -> . DecFunc { Variaveis ListInstrucao Ret }
    (42) Instrucao -> . Atribuicao
    (43) Instrucao -> . Leitura
    (44) Instrucao -> . Escrita
    (45) Instrucao -> . Condicao
    (46) Instrucao -> . Ciclo
    (38) DecFunc -> . FUNC ID
    (47) Atribuicao -> . Var = Expr ;
    (53) Leitura -> . READ Var ;
    (54) Escrita -> . WRITE Var ;
    (55) Condicao -> . IF ExprCond Do ListInstrucao ContinuacaoIf
    (70) Ciclo -> . CicloWhile
    (71) Ciclo -> . CicloRepeat
    (72) Ciclo -> . CicloFor
    (48) Var -> . ID ContinuacaoVar
    (73) CicloWhile -> . While ExprCond Do { ListInstrucao }
    (75) CicloRepeat -> . Repeat { ListInstrucao } Until ExprCond
    (78) CicloFor -> . FOR ( AtribuicaoInicial ExprCond EndCond Atribuicao ) { ListInstrucao }
    (74) While -> . WHILE
    (76) Repeat -> . REPEAT

    $end            reduce using rule 36 (Codigo -> .)
    FUNC            shift and go to state 14
    READ            shift and go to state 17
    WRITE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 15
    FOR             shift and go to state 25
    WHILE           shift and go to state 26
    REPEAT          shift and go to state 27

    Codigo                         shift and go to state 5
    Funcao                         shift and go to state 6
    Instrucao                      shift and go to state 7
    DecFunc                        shift and go to state 8
    Atribuicao                     shift and go to state 9
    Leitura                        shift and go to state 10
    Escrita                        shift and go to state 11
    Condicao                       shift and go to state 12
    Ciclo                          shift and go to state 13
    Var                            shift and go to state 16
    CicloWhile                     shift and go to state 20
    CicloRepeat                    shift and go to state 21
    CicloFor                       shift and go to state 22
    While                          shift and go to state 23
    Repeat                         shift and go to state 24

state 4

    (3) Variaveis -> { . Declaracoes }
    (4) Declaracoes -> . Declaracao Declaracoes
    (5) Declaracoes -> .
    (6) Declaracao -> . Type ContinuacaoDeclaracao
    (7) Type -> . ID

    }               reduce using rule 5 (Declaracoes -> .)
    ID              shift and go to state 31

    Declaracoes                    shift and go to state 28
    Declaracao                     shift and go to state 29
    Type                           shift and go to state 30

state 5

    (1) Inicio -> Start Variaveis Codigo .

    $end            reduce using rule 1 (Inicio -> Start Variaveis Codigo .)


state 6

    (34) Codigo -> Funcao . Codigo
    (34) Codigo -> . Funcao Codigo
    (35) Codigo -> . Instrucao Codigo
    (36) Codigo -> .
    (37) Funcao -> . DecFunc { Variaveis ListInstrucao Ret }
    (42) Instrucao -> . Atribuicao
    (43) Instrucao -> . Leitura
    (44) Instrucao -> . Escrita
    (45) Instrucao -> . Condicao
    (46) Instrucao -> . Ciclo
    (38) DecFunc -> . FUNC ID
    (47) Atribuicao -> . Var = Expr ;
    (53) Leitura -> . READ Var ;
    (54) Escrita -> . WRITE Var ;
    (55) Condicao -> . IF ExprCond Do ListInstrucao ContinuacaoIf
    (70) Ciclo -> . CicloWhile
    (71) Ciclo -> . CicloRepeat
    (72) Ciclo -> . CicloFor
    (48) Var -> . ID ContinuacaoVar
    (73) CicloWhile -> . While ExprCond Do { ListInstrucao }
    (75) CicloRepeat -> . Repeat { ListInstrucao } Until ExprCond
    (78) CicloFor -> . FOR ( AtribuicaoInicial ExprCond EndCond Atribuicao ) { ListInstrucao }
    (74) While -> . WHILE
    (76) Repeat -> . REPEAT

    $end            reduce using rule 36 (Codigo -> .)
    FUNC            shift and go to state 14
    READ            shift and go to state 17
    WRITE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 15
    FOR             shift and go to state 25
    WHILE           shift and go to state 26
    REPEAT          shift and go to state 27

    Funcao                         shift and go to state 6
    Codigo                         shift and go to state 32
    Instrucao                      shift and go to state 7
    DecFunc                        shift and go to state 8
    Atribuicao                     shift and go to state 9
    Leitura                        shift and go to state 10
    Escrita                        shift and go to state 11
    Condicao                       shift and go to state 12
    Ciclo                          shift and go to state 13
    Var                            shift and go to state 16
    CicloWhile                     shift and go to state 20
    CicloRepeat                    shift and go to state 21
    CicloFor                       shift and go to state 22
    While                          shift and go to state 23
    Repeat                         shift and go to state 24

state 7

    (35) Codigo -> Instrucao . Codigo
    (34) Codigo -> . Funcao Codigo
    (35) Codigo -> . Instrucao Codigo
    (36) Codigo -> .
    (37) Funcao -> . DecFunc { Variaveis ListInstrucao Ret }
    (42) Instrucao -> . Atribuicao
    (43) Instrucao -> . Leitura
    (44) Instrucao -> . Escrita
    (45) Instrucao -> . Condicao
    (46) Instrucao -> . Ciclo
    (38) DecFunc -> . FUNC ID
    (47) Atribuicao -> . Var = Expr ;
    (53) Leitura -> . READ Var ;
    (54) Escrita -> . WRITE Var ;
    (55) Condicao -> . IF ExprCond Do ListInstrucao ContinuacaoIf
    (70) Ciclo -> . CicloWhile
    (71) Ciclo -> . CicloRepeat
    (72) Ciclo -> . CicloFor
    (48) Var -> . ID ContinuacaoVar
    (73) CicloWhile -> . While ExprCond Do { ListInstrucao }
    (75) CicloRepeat -> . Repeat { ListInstrucao } Until ExprCond
    (78) CicloFor -> . FOR ( AtribuicaoInicial ExprCond EndCond Atribuicao ) { ListInstrucao }
    (74) While -> . WHILE
    (76) Repeat -> . REPEAT

    $end            reduce using rule 36 (Codigo -> .)
    FUNC            shift and go to state 14
    READ            shift and go to state 17
    WRITE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 15
    FOR             shift and go to state 25
    WHILE           shift and go to state 26
    REPEAT          shift and go to state 27

    Instrucao                      shift and go to state 7
    Codigo                         shift and go to state 33
    Funcao                         shift and go to state 6
    DecFunc                        shift and go to state 8
    Atribuicao                     shift and go to state 9
    Leitura                        shift and go to state 10
    Escrita                        shift and go to state 11
    Condicao                       shift and go to state 12
    Ciclo                          shift and go to state 13
    Var                            shift and go to state 16
    CicloWhile                     shift and go to state 20
    CicloRepeat                    shift and go to state 21
    CicloFor                       shift and go to state 22
    While                          shift and go to state 23
    Repeat                         shift and go to state 24

state 8

    (37) Funcao -> DecFunc . { Variaveis ListInstrucao Ret }

    {               shift and go to state 34


state 9

    (42) Instrucao -> Atribuicao .

    FUNC            reduce using rule 42 (Instrucao -> Atribuicao .)
    READ            reduce using rule 42 (Instrucao -> Atribuicao .)
    WRITE           reduce using rule 42 (Instrucao -> Atribuicao .)
    IF              reduce using rule 42 (Instrucao -> Atribuicao .)
    ID              reduce using rule 42 (Instrucao -> Atribuicao .)
    FOR             reduce using rule 42 (Instrucao -> Atribuicao .)
    WHILE           reduce using rule 42 (Instrucao -> Atribuicao .)
    REPEAT          reduce using rule 42 (Instrucao -> Atribuicao .)
    $end            reduce using rule 42 (Instrucao -> Atribuicao .)
    }               reduce using rule 42 (Instrucao -> Atribuicao .)
    RET             reduce using rule 42 (Instrucao -> Atribuicao .)
    ;               reduce using rule 42 (Instrucao -> Atribuicao .)
    ELSE            reduce using rule 42 (Instrucao -> Atribuicao .)


state 10

    (43) Instrucao -> Leitura .

    FUNC            reduce using rule 43 (Instrucao -> Leitura .)
    READ            reduce using rule 43 (Instrucao -> Leitura .)
    WRITE           reduce using rule 43 (Instrucao -> Leitura .)
    IF              reduce using rule 43 (Instrucao -> Leitura .)
    ID              reduce using rule 43 (Instrucao -> Leitura .)
    FOR             reduce using rule 43 (Instrucao -> Leitura .)
    WHILE           reduce using rule 43 (Instrucao -> Leitura .)
    REPEAT          reduce using rule 43 (Instrucao -> Leitura .)
    $end            reduce using rule 43 (Instrucao -> Leitura .)
    }               reduce using rule 43 (Instrucao -> Leitura .)
    RET             reduce using rule 43 (Instrucao -> Leitura .)
    ;               reduce using rule 43 (Instrucao -> Leitura .)
    ELSE            reduce using rule 43 (Instrucao -> Leitura .)


state 11

    (44) Instrucao -> Escrita .

    FUNC            reduce using rule 44 (Instrucao -> Escrita .)
    READ            reduce using rule 44 (Instrucao -> Escrita .)
    WRITE           reduce using rule 44 (Instrucao -> Escrita .)
    IF              reduce using rule 44 (Instrucao -> Escrita .)
    ID              reduce using rule 44 (Instrucao -> Escrita .)
    FOR             reduce using rule 44 (Instrucao -> Escrita .)
    WHILE           reduce using rule 44 (Instrucao -> Escrita .)
    REPEAT          reduce using rule 44 (Instrucao -> Escrita .)
    $end            reduce using rule 44 (Instrucao -> Escrita .)
    }               reduce using rule 44 (Instrucao -> Escrita .)
    RET             reduce using rule 44 (Instrucao -> Escrita .)
    ;               reduce using rule 44 (Instrucao -> Escrita .)
    ELSE            reduce using rule 44 (Instrucao -> Escrita .)


state 12

    (45) Instrucao -> Condicao .

    FUNC            reduce using rule 45 (Instrucao -> Condicao .)
    READ            reduce using rule 45 (Instrucao -> Condicao .)
    WRITE           reduce using rule 45 (Instrucao -> Condicao .)
    IF              reduce using rule 45 (Instrucao -> Condicao .)
    ID              reduce using rule 45 (Instrucao -> Condicao .)
    FOR             reduce using rule 45 (Instrucao -> Condicao .)
    WHILE           reduce using rule 45 (Instrucao -> Condicao .)
    REPEAT          reduce using rule 45 (Instrucao -> Condicao .)
    $end            reduce using rule 45 (Instrucao -> Condicao .)
    }               reduce using rule 45 (Instrucao -> Condicao .)
    RET             reduce using rule 45 (Instrucao -> Condicao .)
    ;               reduce using rule 45 (Instrucao -> Condicao .)
    ELSE            reduce using rule 45 (Instrucao -> Condicao .)


state 13

    (46) Instrucao -> Ciclo .

    FUNC            reduce using rule 46 (Instrucao -> Ciclo .)
    READ            reduce using rule 46 (Instrucao -> Ciclo .)
    WRITE           reduce using rule 46 (Instrucao -> Ciclo .)
    IF              reduce using rule 46 (Instrucao -> Ciclo .)
    ID              reduce using rule 46 (Instrucao -> Ciclo .)
    FOR             reduce using rule 46 (Instrucao -> Ciclo .)
    WHILE           reduce using rule 46 (Instrucao -> Ciclo .)
    REPEAT          reduce using rule 46 (Instrucao -> Ciclo .)
    $end            reduce using rule 46 (Instrucao -> Ciclo .)
    }               reduce using rule 46 (Instrucao -> Ciclo .)
    RET             reduce using rule 46 (Instrucao -> Ciclo .)
    ;               reduce using rule 46 (Instrucao -> Ciclo .)
    ELSE            reduce using rule 46 (Instrucao -> Ciclo .)


state 14

    (38) DecFunc -> FUNC . ID

    ID              shift and go to state 35


state 15

    (48) Var -> ID . ContinuacaoVar
    (49) ContinuacaoVar -> . [ INT ] ContContinuacaoVar
    (50) ContinuacaoVar -> .

    [               shift and go to state 37
    =               reduce using rule 50 (ContinuacaoVar -> .)
    ;               reduce using rule 50 (ContinuacaoVar -> .)

    ContinuacaoVar                 shift and go to state 36

state 16

    (47) Atribuicao -> Var . = Expr ;

    =               shift and go to state 38


state 17

    (53) Leitura -> READ . Var ;
    (48) Var -> . ID ContinuacaoVar

    ID              shift and go to state 15

    Var                            shift and go to state 39

state 18

    (54) Escrita -> WRITE . Var ;
    (48) Var -> . ID ContinuacaoVar

    ID              shift and go to state 15

    Var                            shift and go to state 40

state 19

    (55) Condicao -> IF . ExprCond Do ListInstrucao ContinuacaoIf
    (60) ExprCond -> . ExprCond ContinuacaoExprCond
    (61) ExprCond -> . Cond
    (64) Cond -> . Expr ContinuacaoCond
    (15) Expr -> . Expr ContinuacaoExpr
    (16) Expr -> . Term
    (19) Term -> . Term ContinuacaoTerm
    (20) Term -> . Factor
    (24) Factor -> . INT
    (25) Factor -> . - INT
    (26) Factor -> . FLOAT
    (27) Factor -> . - FLOAT
    (28) Factor -> . ID ContinuacaoFactor
    (33) Factor -> . CALL ID

    INT             shift and go to state 46
    -               shift and go to state 47
    FLOAT           shift and go to state 48
    ID              shift and go to state 49
    CALL            shift and go to state 50

    ExprCond                       shift and go to state 41
    Cond                           shift and go to state 42
    Expr                           shift and go to state 43
    Term                           shift and go to state 44
    Factor                         shift and go to state 45

state 20

    (70) Ciclo -> CicloWhile .

    FUNC            reduce using rule 70 (Ciclo -> CicloWhile .)
    READ            reduce using rule 70 (Ciclo -> CicloWhile .)
    WRITE           reduce using rule 70 (Ciclo -> CicloWhile .)
    IF              reduce using rule 70 (Ciclo -> CicloWhile .)
    ID              reduce using rule 70 (Ciclo -> CicloWhile .)
    FOR             reduce using rule 70 (Ciclo -> CicloWhile .)
    WHILE           reduce using rule 70 (Ciclo -> CicloWhile .)
    REPEAT          reduce using rule 70 (Ciclo -> CicloWhile .)
    $end            reduce using rule 70 (Ciclo -> CicloWhile .)
    }               reduce using rule 70 (Ciclo -> CicloWhile .)
    RET             reduce using rule 70 (Ciclo -> CicloWhile .)
    ;               reduce using rule 70 (Ciclo -> CicloWhile .)
    ELSE            reduce using rule 70 (Ciclo -> CicloWhile .)


state 21

    (71) Ciclo -> CicloRepeat .

    FUNC            reduce using rule 71 (Ciclo -> CicloRepeat .)
    READ            reduce using rule 71 (Ciclo -> CicloRepeat .)
    WRITE           reduce using rule 71 (Ciclo -> CicloRepeat .)
    IF              reduce using rule 71 (Ciclo -> CicloRepeat .)
    ID              reduce using rule 71 (Ciclo -> CicloRepeat .)
    FOR             reduce using rule 71 (Ciclo -> CicloRepeat .)
    WHILE           reduce using rule 71 (Ciclo -> CicloRepeat .)
    REPEAT          reduce using rule 71 (Ciclo -> CicloRepeat .)
    $end            reduce using rule 71 (Ciclo -> CicloRepeat .)
    }               reduce using rule 71 (Ciclo -> CicloRepeat .)
    RET             reduce using rule 71 (Ciclo -> CicloRepeat .)
    ;               reduce using rule 71 (Ciclo -> CicloRepeat .)
    ELSE            reduce using rule 71 (Ciclo -> CicloRepeat .)


state 22

    (72) Ciclo -> CicloFor .

    FUNC            reduce using rule 72 (Ciclo -> CicloFor .)
    READ            reduce using rule 72 (Ciclo -> CicloFor .)
    WRITE           reduce using rule 72 (Ciclo -> CicloFor .)
    IF              reduce using rule 72 (Ciclo -> CicloFor .)
    ID              reduce using rule 72 (Ciclo -> CicloFor .)
    FOR             reduce using rule 72 (Ciclo -> CicloFor .)
    WHILE           reduce using rule 72 (Ciclo -> CicloFor .)
    REPEAT          reduce using rule 72 (Ciclo -> CicloFor .)
    $end            reduce using rule 72 (Ciclo -> CicloFor .)
    }               reduce using rule 72 (Ciclo -> CicloFor .)
    RET             reduce using rule 72 (Ciclo -> CicloFor .)
    ;               reduce using rule 72 (Ciclo -> CicloFor .)
    ELSE            reduce using rule 72 (Ciclo -> CicloFor .)


state 23

    (73) CicloWhile -> While . ExprCond Do { ListInstrucao }
    (60) ExprCond -> . ExprCond ContinuacaoExprCond
    (61) ExprCond -> . Cond
    (64) Cond -> . Expr ContinuacaoCond
    (15) Expr -> . Expr ContinuacaoExpr
    (16) Expr -> . Term
    (19) Term -> . Term ContinuacaoTerm
    (20) Term -> . Factor
    (24) Factor -> . INT
    (25) Factor -> . - INT
    (26) Factor -> . FLOAT
    (27) Factor -> . - FLOAT
    (28) Factor -> . ID ContinuacaoFactor
    (33) Factor -> . CALL ID

    INT             shift and go to state 46
    -               shift and go to state 47
    FLOAT           shift and go to state 48
    ID              shift and go to state 49
    CALL            shift and go to state 50

    ExprCond                       shift and go to state 51
    Cond                           shift and go to state 42
    Expr                           shift and go to state 43
    Term                           shift and go to state 44
    Factor                         shift and go to state 45

state 24

    (75) CicloRepeat -> Repeat . { ListInstrucao } Until ExprCond

    {               shift and go to state 52


state 25

    (78) CicloFor -> FOR . ( AtribuicaoInicial ExprCond EndCond Atribuicao ) { ListInstrucao }

    (               shift and go to state 53


state 26

    (74) While -> WHILE .

    INT             reduce using rule 74 (While -> WHILE .)
    -               reduce using rule 74 (While -> WHILE .)
    FLOAT           reduce using rule 74 (While -> WHILE .)
    ID              reduce using rule 74 (While -> WHILE .)
    CALL            reduce using rule 74 (While -> WHILE .)


state 27

    (76) Repeat -> REPEAT .

    {               reduce using rule 76 (Repeat -> REPEAT .)


state 28

    (3) Variaveis -> { Declaracoes . }

    }               shift and go to state 54


state 29

    (4) Declaracoes -> Declaracao . Declaracoes
    (4) Declaracoes -> . Declaracao Declaracoes
    (5) Declaracoes -> .
    (6) Declaracao -> . Type ContinuacaoDeclaracao
    (7) Type -> . ID

    }               reduce using rule 5 (Declaracoes -> .)
    ID              shift and go to state 31

    Declaracao                     shift and go to state 29
    Declaracoes                    shift and go to state 55
    Type                           shift and go to state 30

state 30

    (6) Declaracao -> Type . ContinuacaoDeclaracao
    (8) ContinuacaoDeclaracao -> . ID ContContinuacaoDeclaracao
    (9) ContinuacaoDeclaracao -> . Array ID ;
    (12) Array -> . [ INT ] ContArray

    ID              shift and go to state 57
    [               shift and go to state 59

    ContinuacaoDeclaracao          shift and go to state 56
    Array                          shift and go to state 58

state 31

    (7) Type -> ID .

    ID              reduce using rule 7 (Type -> ID .)
    [               reduce using rule 7 (Type -> ID .)


state 32

    (34) Codigo -> Funcao Codigo .

    $end            reduce using rule 34 (Codigo -> Funcao Codigo .)


state 33

    (35) Codigo -> Instrucao Codigo .

    $end            reduce using rule 35 (Codigo -> Instrucao Codigo .)


state 34

    (37) Funcao -> DecFunc { . Variaveis ListInstrucao Ret }
    (3) Variaveis -> . { Declaracoes }

    {               shift and go to state 4

    Variaveis                      shift and go to state 60

state 35

    (38) DecFunc -> FUNC ID .

    {               reduce using rule 38 (DecFunc -> FUNC ID .)


state 36

    (48) Var -> ID ContinuacaoVar .

    =               reduce using rule 48 (Var -> ID ContinuacaoVar .)
    ;               reduce using rule 48 (Var -> ID ContinuacaoVar .)


state 37

    (49) ContinuacaoVar -> [ . INT ] ContContinuacaoVar

    INT             shift and go to state 61


state 38

    (47) Atribuicao -> Var = . Expr ;
    (15) Expr -> . Expr ContinuacaoExpr
    (16) Expr -> . Term
    (19) Term -> . Term ContinuacaoTerm
    (20) Term -> . Factor
    (24) Factor -> . INT
    (25) Factor -> . - INT
    (26) Factor -> . FLOAT
    (27) Factor -> . - FLOAT
    (28) Factor -> . ID ContinuacaoFactor
    (33) Factor -> . CALL ID

    INT             shift and go to state 46
    -               shift and go to state 47
    FLOAT           shift and go to state 48
    ID              shift and go to state 49
    CALL            shift and go to state 50

    Expr                           shift and go to state 62
    Term                           shift and go to state 44
    Factor                         shift and go to state 45

state 39

    (53) Leitura -> READ Var . ;

    ;               shift and go to state 63


state 40

    (54) Escrita -> WRITE Var . ;

    ;               shift and go to state 64


state 41

    (55) Condicao -> IF ExprCond . Do ListInstrucao ContinuacaoIf
    (60) ExprCond -> ExprCond . ContinuacaoExprCond
    (58) Do -> . DO
    (62) ContinuacaoExprCond -> . & Cond
    (63) ContinuacaoExprCond -> . | Cond

    DO              shift and go to state 67
    &               shift and go to state 68
    |               shift and go to state 69

    Do                             shift and go to state 65
    ContinuacaoExprCond            shift and go to state 66

state 42

    (61) ExprCond -> Cond .

    DO              reduce using rule 61 (ExprCond -> Cond .)
    &               reduce using rule 61 (ExprCond -> Cond .)
    |               reduce using rule 61 (ExprCond -> Cond .)
    ;               reduce using rule 61 (ExprCond -> Cond .)
    FUNC            reduce using rule 61 (ExprCond -> Cond .)
    READ            reduce using rule 61 (ExprCond -> Cond .)
    WRITE           reduce using rule 61 (ExprCond -> Cond .)
    IF              reduce using rule 61 (ExprCond -> Cond .)
    ID              reduce using rule 61 (ExprCond -> Cond .)
    FOR             reduce using rule 61 (ExprCond -> Cond .)
    WHILE           reduce using rule 61 (ExprCond -> Cond .)
    REPEAT          reduce using rule 61 (ExprCond -> Cond .)
    $end            reduce using rule 61 (ExprCond -> Cond .)
    }               reduce using rule 61 (ExprCond -> Cond .)
    RET             reduce using rule 61 (ExprCond -> Cond .)
    ELSE            reduce using rule 61 (ExprCond -> Cond .)


state 43

    (64) Cond -> Expr . ContinuacaoCond
    (15) Expr -> Expr . ContinuacaoExpr
    (65) ContinuacaoCond -> . EQUAL Expr
    (66) ContinuacaoCond -> . BIGGER Expr
    (67) ContinuacaoCond -> . BIGGEREQUAL Expr
    (68) ContinuacaoCond -> . SMALLER Expr
    (69) ContinuacaoCond -> . SMALLEREQUAL Expr
    (17) ContinuacaoExpr -> . + Term
    (18) ContinuacaoExpr -> . - Term

    EQUAL           shift and go to state 72
    BIGGER          shift and go to state 73
    BIGGEREQUAL     shift and go to state 74
    SMALLER         shift and go to state 75
    SMALLEREQUAL    shift and go to state 76
    +               shift and go to state 77
    -               shift and go to state 78

    ContinuacaoCond                shift and go to state 70
    ContinuacaoExpr                shift and go to state 71

state 44

    (16) Expr -> Term .
    (19) Term -> Term . ContinuacaoTerm
    (21) ContinuacaoTerm -> . * Factor
    (22) ContinuacaoTerm -> . / Factor
    (23) ContinuacaoTerm -> . % Factor

    EQUAL           reduce using rule 16 (Expr -> Term .)
    BIGGER          reduce using rule 16 (Expr -> Term .)
    BIGGEREQUAL     reduce using rule 16 (Expr -> Term .)
    SMALLER         reduce using rule 16 (Expr -> Term .)
    SMALLEREQUAL    reduce using rule 16 (Expr -> Term .)
    +               reduce using rule 16 (Expr -> Term .)
    -               reduce using rule 16 (Expr -> Term .)
    ;               reduce using rule 16 (Expr -> Term .)
    DO              reduce using rule 16 (Expr -> Term .)
    &               reduce using rule 16 (Expr -> Term .)
    |               reduce using rule 16 (Expr -> Term .)
    FUNC            reduce using rule 16 (Expr -> Term .)
    READ            reduce using rule 16 (Expr -> Term .)
    WRITE           reduce using rule 16 (Expr -> Term .)
    IF              reduce using rule 16 (Expr -> Term .)
    ID              reduce using rule 16 (Expr -> Term .)
    FOR             reduce using rule 16 (Expr -> Term .)
    WHILE           reduce using rule 16 (Expr -> Term .)
    REPEAT          reduce using rule 16 (Expr -> Term .)
    $end            reduce using rule 16 (Expr -> Term .)
    }               reduce using rule 16 (Expr -> Term .)
    RET             reduce using rule 16 (Expr -> Term .)
    ELSE            reduce using rule 16 (Expr -> Term .)
    *               shift and go to state 80
    /               shift and go to state 81
    %               shift and go to state 82

    ContinuacaoTerm                shift and go to state 79

state 45

    (20) Term -> Factor .

    *               reduce using rule 20 (Term -> Factor .)
    /               reduce using rule 20 (Term -> Factor .)
    %               reduce using rule 20 (Term -> Factor .)
    EQUAL           reduce using rule 20 (Term -> Factor .)
    BIGGER          reduce using rule 20 (Term -> Factor .)
    BIGGEREQUAL     reduce using rule 20 (Term -> Factor .)
    SMALLER         reduce using rule 20 (Term -> Factor .)
    SMALLEREQUAL    reduce using rule 20 (Term -> Factor .)
    +               reduce using rule 20 (Term -> Factor .)
    -               reduce using rule 20 (Term -> Factor .)
    ;               reduce using rule 20 (Term -> Factor .)
    DO              reduce using rule 20 (Term -> Factor .)
    &               reduce using rule 20 (Term -> Factor .)
    |               reduce using rule 20 (Term -> Factor .)
    FUNC            reduce using rule 20 (Term -> Factor .)
    READ            reduce using rule 20 (Term -> Factor .)
    WRITE           reduce using rule 20 (Term -> Factor .)
    IF              reduce using rule 20 (Term -> Factor .)
    ID              reduce using rule 20 (Term -> Factor .)
    FOR             reduce using rule 20 (Term -> Factor .)
    WHILE           reduce using rule 20 (Term -> Factor .)
    REPEAT          reduce using rule 20 (Term -> Factor .)
    $end            reduce using rule 20 (Term -> Factor .)
    }               reduce using rule 20 (Term -> Factor .)
    RET             reduce using rule 20 (Term -> Factor .)
    ELSE            reduce using rule 20 (Term -> Factor .)


state 46

    (24) Factor -> INT .
